2001-08-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/autoconf/c.m4 (AC_C_BIGENDIAN): Handle ACTION-IF-TRUE,
	ACTION-IF-FALSE, and ACTION-IF-UNKNOWN.
	* doc/autoconf.texi (C Compiler Characteristics): Update
	documentation for AC_C_BIGENDIAN.

2001-08-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/autoconf/c.m4 (AC_C_BIGENDIAN): Guess endianness by grep'ing
	magic values from an object file when cross-compiling.
	Based on code by Guido Draheim <Guido.Draheim@gmx.de>.

2001-08-10  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (&handle_output): Don't use `grep' with side
	effects.
	Suggested by Russ Allbery.

2001-08-10  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	* lib/autoconf/general.m4 (_AC_OUTPUT_SUBDIRS): Propagate the
	current $prefix to the sub-configures.

2001-08-09  Tim Van Holder  <tim.van.holder@pandora.be>

	* lib/autoconf/lang.m4: Ignore *.xSYM when looking for an executable
	extension (needed on BeOS).  Reported by Guido van Rossum.

2001-08-09  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in ($icache): Load it only if older than autom4te.

2001-08-07  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): All the `at-*' are to be
	removed.
	(at-setup-line): Huh?  Be a variable `at_setup_line', not a file.
	No need to remove the files before and after the each test, before
	each test and at the end of the suite is enough.
	Display only the children `times', not the shell's.
	If the test failed or was skipped, at-times is not available.

2001-08-07  Akim Demaille  <akim@epita.fr>

	Always produce testsuite.log, including when there are no
	failures.  This helps getting information on skipped tests, and
	duration of the tests.  Err, implement the latter btw.

	* lib/autotest/general.m4 (AT_INIT): Set up fd 6 for the log.
	Dump information on the first run of each test.
	(AT_CLEANUP): Create `at-times' containing the duration of the
	test group.

2001-08-07  Akim Demaille  <akim@epita.fr>
