@@ -1,3 +1,7 @@
+2001-08-12  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* tests/semantics.at (AC_C_BIGENDIAN): New test.
+
 2001-08-11  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* lib/autoconf/c.m4 (AC_C_BIGENDIAN): Handle ACTION-IF-TRUE,
